[package]
name = "AngryWolf"
version = "0.1.1"
edition = "2021"
authors = ["Cat"]
description = "Console utility to output file into console"
license = "MIT"
documentation = "https://github.com/Vova-max-png/AngryWolf"
repository = "https://github.com/Vova-max-png/AngryWolf"
categories = ["Command line utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
